[gd_scene load_steps=2 format=3 uid="uid://xot6nt4lgqqx"]

[ext_resource type="Script" path="res://scripts/title.gd" id="1_eain7"]

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -36.0
offset_right = -16.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eain7")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 505.0
offset_top = 262.0
offset_right = 632.0
offset_bottom = 433.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "START"

[node name="Continue" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "CONTINUE"

[node name="Encyclopedia" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ENCYCLOPEDIA"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SETTINGS"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "QUIT"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Encyclopedia" to="." method="_on_encyclopedia_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
